feat: implements dynamic universal API and dual-notification support form

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,14 @@ API_KEY_ENCRYPTION_SECRET=your_encryption_secret_here_change_this_to_random_stri
 
 # Session
 SESSION_SECRET=your_session_secret_here_change_this_to_random_string
+
+# Support Notifications (Optional)
+# Slack Webhook URL
+SUPPORT_WEBHOOK_URL=https://hooks.slack.com/services/XXXXXXXXX
+
+# Email Support (for receiving requests via email)
+SUPPORT_EMAIL=your-support@example.com
+SMTP_HOST=smtp.yourprovider.com
+SMTP_PORT=587
+SMTP_USER=your-sending-email@example.com
+SMTP_PASS=your-app-password
