--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
   "author": "Sohail Qayyum",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.11.3",
-    "dotenv": "^16.3.1",
     "axios": "^1.6.2",
-    "crypto": "^1.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
-    "uuid": "^9.0.1",
-    "jsonwebtoken": "^9.0.2"
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^8.0.0",
+    "pg": "^8.11.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
